<resources>
    <string name="app_name">SRwallet</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="acc_number">Account Number</string>
    <string name="number">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="already_a_member_sign_in">Already a member? Sign in</string>
    <string name="login">LOGIN</string>
    <string name="not_a_member_sign_up">Not a member ? Sign up</string>
    <string name="home">Home</string>
    <string name="loans">Loans</string>
    <string name="insurance">Insurance</string>
    <string name="logout">Logout</string>
    <string name="user_name">User name</string>
    <string name="user_acc">User Account Number</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="transactions">Transactions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_transaction">Paid To-</string>
    <string name="date">date and time</string>
    <string name="apply_insurance">Apply Insurance</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="interest_rate">Interest Rate:</string>
    <string name="pay_dues">Pay Dues</string>
    <string name="Bond">Bond</string>
    <string name="Deposit">Deposit</string>
    <string name="enter_bondamount">Enter Amount( 1000 to 4000)</string>
    <string name="view">View</string>
    <string name="apply">Apply</string>
    <string name="user_id">User Id</string>
    <string name="type">Type</string>
    <string name="duration">Duration</string>
    <string name="amount">Amount</string>
    <string name="rate_of_interest">Rate of Interest</string>
    <string name="agent">Agent</string>
    <string name="status">Status</string>
    <string name="view_profile">View Profile</string>
    <string name="enter_amount_in_rupees">Enter Amount in Rupees</string>
    <string name="enter_rate_of_interest">Enter Rate of Interest</string>
    <string name="enter_duration_in_years">Enter Duration in Years</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="close">close</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="occupation">Occupation</string>
    <string name="is_agent">Is Agent</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="annual_income">Annual Income</string>
    <string name="phone_no">Phone No.</string>
    <string name="applicant_details">Applicant Details</string>
    <string name="update_details">Update Details</string>
    <string name="nwallet">Nwallet</string>
    <string name="twallet">TWallet</string>
    <string name="cwallet">CWallet</string>
    <string name="dwallet">Dwallet</string>
    <string name="mwallet">Mwallet</string>
    <string name="hi_user"> User</string>
    <string name="last_login">Last Login: </string>
    <string name="balance">Balance</string>
    <string name="balance_placeholder">Balance_placeHolder</string>
    <string name="acc_no">Acc No:</string>
    <string name="my_account">My Account</string>
    <string name="fund_transfer">Fund Transfer</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="user">User</string>
    <string name="cheque_service">Cheque Service</string>
    <string name="pay_using_razorpay">Pay Using Razorpay</string>
    <string name="passbook">Passbook</string>
    <string name="add_money_to_wallets">Add Money to Wallets</string>
    <string name="enter_amount_to_add_in">Enter amount to add in</string>
    <string name="add_money">Add Money</string>
    <string name="share">Share</string>
    <string name="bondinterest">Rate of Interest is 8% to 15%</string>
    <string name="bondDuration">Duration will be 2 to 15 years</string>
    <string name="add_cheque">Add Cheque</string>
    <string name="enter_total_number_of_chequebooks">Enter Total Number of Cheque</string>
    <string name="note_cost_to_add_one_cheque_is_rs_5_per_cheque">Note Cost to add one cheque is Rs. 5 Per Cheque
    </string>
    <string name="cheques_available">Cheques Available :</string>
    <string name="send">Send</string>
    <string name="date_cheque">Date</string>
    <string name="accept_cheque">Accept Cheque</string>
    <string name="send_cheque">Send Cheque</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="beneficiary_account_number">Beneficiary Account Number</string>
    <string name="select_users_wallet">Select Users Wallet</string>
    <string name="select_beneficiary_wallet">Select beneficiary Wallet</string>
    <string name="converter">Converter</string>
    <string name="transaction_from">Received From-</string>
    <string name="transaction_Type">Transaction_Type-</string>
    <string name="description">Description-</string>
    <string name="serialNo">S.No.</string>
    <string name="quantity">Quantity</string>
    <string name="zero">0</string>
    <string name="ask_admin_to_update">Ask Admin To Update</string>
    <string name="request_money_in_inr">Request Money In INR</string>
    <string name="accept_coin_to_inr">Accept coin to Inr</string>
    <string name="reject_coin_to_inr">Reject Coin To INR</string>
    <string name="mobile_no">Mobile No. :</string>

    <string name="front_back"><![CDATA[**(front & back) ]]></string>

    <string name="pay_using_bitcoin">Pay Using Bitcoin</string>
    <string name="pay_using_skrill_wallet">Pay Using Skrill Wallet</string>
    <string name="copy_the_below_wallet_address_and_make_payment_to_proceed_adding_money">Copy The Below Wallet Address And Make Payment to Proceed Adding Money</string>
    <string name="proceed">Proceed</string>
    <string name="add_money_requests">Add Money Requests</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="permissions">Permissions</string>
    <string name="hi">Hi!!</string>
    <string name="admincontrol">Admin Control</string>
    <string name="this_is_to_inform_that_you_have_to_pay_inr_258_to_activate_your_referral_code_once_a_user_signs_up_using_your_code_and_activates_his_referal_code_you_will_get_the_referral_money">This is to inform that you have to pay INR 258 to activate your referral code once a user signs up using your code , and activates his referal code, you will get the referral money</string>
    <string name="view_contacts" />

</resources>