<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:padding="6dp"
    android:layout_margin="6dp"
    android:elevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/paid_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:padding="6dp"
                android:text="@string/sample_transaction"
                    android:textStyle="bold"
                android:textSize="18sp" />
            <TextView
                    android:id="@+id/recieved_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:padding="6dp"
                    android:text="@string/transaction_from"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            <TextView
                android:id="@+id/Transactiontype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:padding="6dp"
                android:text="@string/transaction_Type"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:padding="6dp"
                android:text="@string/date"
                android:textSize="16sp" />
            <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:padding="6dp"
                    android:text="@string/description"
                    android:textSize="13sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/amount"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>