<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payments.PayUsingRazorpay">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/paybtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
            android:text="@string/pay_using_razorpay" />

        <Button
                android:id="@+id/paybtc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:text="@string/pay_using_bitcoin" />

        <Button
                android:id="@+id/paywall"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="@string/pay_using_skrill_wallet" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>