<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:elevation="250dp"
        app:cardElevation="250dp"
        android:id="@+id/pay_layout">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/copy_the_below_wallet_address_and_make_payment_to_proceed_adding_money"
        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                    android:id="@+id/wallet_address"
                    android:layout_width="250dp"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_copy"
                android:background="@android:color/transparent"
                android:layout_margin="10dp"
                android:id="@+id/copy_btn" />

        </LinearLayout>

        <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:src="@drawable/upl_img"
            android:layout_margin="10dp"
            android:id="@+id/pay_ss"
            android:visibility="gone"    />

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                android:id="@+id/proceed_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proceed"
                    android:backgroundTint="@color/green"
                android:layout_gravity="start"
                android:layout_margin="10dp" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                    android:backgroundTint="@color/green"
                android:layout_margin="10dp"
                android:layout_gravity="end"    />


        </FrameLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>